Fix z-index issues

--- a/src/ui/fab.component.less
+++ b/src/ui/fab.component.less
@@ -4,6 +4,7 @@
     right: 2em;
     bottom: 2em;
     opacity: 1;
+    z-index: 100;
 
     transition: opacity 0.5s ease;
 
